#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(libhmnet, 1.2.0, bugs@himickey.com)
AC_CONFIG_SRCDIR(test/main.c)
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(foreign)

: ${CFLAGS=""}

##########################part two##################################
PACKAGE=libhmnet

AC_MSG_NOTICE([$PACKAGE_NAME-$PACKAGE_VERSION		A library for parse and merge.])
LIBHMNET_MAJOR_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f1)
LIBHMNET_MINOR_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f2)
LIBHMNET_MICRO_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f3)
LIBHMNET_EXTRA_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f4)

LIBHMNET_SO_VERSION=`expr $LIBHMNET_MINOR_VERSION + $LIBHMNET_MAJOR_VERSION`:$LIBHMNET_MICRO_VERSION:$LIBHMNET_MINOR_VERSION
AC_SUBST(LIBHMNET_SO_VERSION, $LIBHMNET_SO_VERSION)

LIBHMNET_VERSION=${LIBHMNET_MAJOR_VERSION}.${LIBHMNET_MINOR_VERSION}.${LIBHMNET_MICRO_VERSION}

if test -n "$LIBHMNET_EXTRA_VERSION" ; then
	LIBHMNET_VERSION="${LIBHMNET_VERSION}.${LIBHMNET_EXTRA_VERSION}"
fi

AC_SUBST(LIBHMNET_VERSION)
AC_DEFINE_UNQUOTED(LIBHMNET_MAJOR_VERSION,$LIBHMNET_MAJOR_VERSION, [major version])
AC_DEFINE_UNQUOTED(LIBHMNET_MINOR_VERSION,$LIBHMNET_MINOR_VERSION, [minor version])
AC_DEFINE_UNQUOTED(LIBHMNET_MICRO_VERSION,$LIBHMNET_MICRO_VERSION, [micro version])
AC_DEFINE_UNQUOTED(LIBHMNET_VERSION,"$LIBHMNET_VERSION",[LIBHMNET version number])
##################################################################

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stddef.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset])

#PKG_CHECK_MODULES(GLIB, [glib-2.0])
#CFLAGS="$CFLAGS $GLIB_CFLAGS"
#LIBS="$LIBS $GLIB_LIBS"

dnl initialize pkg-config so that we can use it within if else fi statements.
PKG_PROG_PKG_CONFIG()

AC_MSG_NOTICE([FOUND CFLAGS DEFINES : "$CFLAGS"])
AC_MSG_NOTICE([FOUND CPPFLAGS DEFINES : "$CPPFLAGS"])
AC_MSG_NOTICE([FOUND LIBS DEFINES : "$LIBS"])

AC_OUTPUT([Makefile
	   libhmnet.pc
	   src/Makefile
           test/Makefile])
